Include info about use of jdk.internal.misc.Unsafe.